--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -121,6 +121,10 @@
 
     <h1 style="color:#1b1b1b; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bolder; ">Featured Products</h1>
     <hr />
+
+    @if(PopularList.Count >= 13)
+    { 
+
     <div class="container" style="margin-left:7%; border:7px solid; border-color:#BBB; background-color:#1b1b1b">
         <div class="col-md-12">
 
@@ -276,6 +280,8 @@
     </div>
 
 
+        
+    }
     <!-- Script to Activate the Carousel -->
     <script>
 
