--- a/Views/Home/latest.cshtml
+++ b/Views/Home/latest.cshtml
@@ -15,6 +15,9 @@
     list = ViewBag.LatestItemsList;
 }
 
+@if(list.Count >= 12)
+{ 
+
 @for (int i = 0; i < 12; i++)
 {
 
@@ -48,5 +51,7 @@
 
         }
     </div>
+    
+}
 }
 
