--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -122,7 +122,7 @@
     <h1 style="color:#1b1b1b; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bolder; ">Featured Products</h1>
     <hr />
 
-    @if(PopularList.Count >= 13)
+    @if(PopularList.Count > 12)
     { 
 
     <div class="container" style="margin-left:7%; border:7px solid; border-color:#BBB; background-color:#1b1b1b">
