--- a/Views/Home/latest.cshtml
+++ b/Views/Home/latest.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="col-lg-12">
-    <h1 style="color:#1b1b1b; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bolder; ">Latest Products</h1>
+    <h1 style="color:#1b1b1b; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bold; ">Latest Products</h1>
     <hr />
 </div>
 
