--- a/Views/Home/getSubCategory.cshtml
+++ b/Views/Home/getSubCategory.cshtml
@@ -31,42 +31,43 @@
             background-color: darkgrey;
             outline: 1px solid slategrey;
         }
-         .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-                            color: #fff;
-                            background-color: #1b1b1b;
-                        }
 
-                        .margintop20 {
-                            margin-top: 20px;
-                        }
+        .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+            color: #fff;
+            background-color: #1b1b1b;
+        }
 
-                        .nav-pills > li > a {
-                            border-radius: 0px;
-                            background-color: #dadada;
-                        }
+        .margintop20 {
+            margin-top: 20px;
+        }
 
-                        ul li a {
-                            color: #000;
-                            text-decoration: none;
-                        }
+        .nav-pills > li > a {
+            border-radius: 0px;
+            background-color: #dadada;
+        }
 
-                        a:hover {
-                            color: #0094ff;
-                            text-decoration: none;
-                        }
+        ul li a {
+            color: #000;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: #0094ff;
+            text-decoration: none;
+        }
 
 
-                        .nav-stacked > li + li {
-                            margin-top: 0px;
-                            margin-left: 0;
-                            border-bottom: 1px solid #dadada;
-                            border-left: 1px solid #dadada;
-                            border-right: 1px solid #dadada;
-                        }
+        .nav-stacked > li + li {
+            margin-top: 0px;
+            margin-left: 0;
+            border-bottom: 1px solid #dadada;
+            border-left: 1px solid #dadada;
+            border-right: 1px solid #dadada;
+        }
 
-                        .active2 {
-                            border-right: 4px solid #428bca;
-                        }
+        .active2 {
+            border-right: 4px solid #428bca;
+        }
 
 
 
@@ -211,6 +212,22 @@
 
             <div class="col-xs-8 pull-right" style="margin-top:-5px;float:left; width:800px;">
 
+
+
+
+                <script src="~/Scripts/jquery.js"></script>
+                <script src="~/Content/fancybox/jquery-1.7.2.min.js"></script>
+                <script src="~/Scripts/jquery.js"></script>
+                <script src="~/Content/fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+                <link href="~/Content/fancybox/source/jquery.fancybox.css" rel="stylesheet" />
+                <script src="~/Content/fancybox/source/jquery.fancybox.js"></script>
+                <script src="~/Content/fancybox/source/jquery.fancybox.pack.js"></script>
+                <link href="~/Content/fancybox/source/helpers/jquery.fancybox-buttons.css" rel="stylesheet" />
+                <link href="~/Content/fancybox/source/helpers/jquery.fancybox-thumbs.css" rel="stylesheet" />
+                <script src="~/Content/fancybox/source/helpers/jquery.fancybox-buttons.js"></script>
+                <script src="~/Content/fancybox/source/helpers/jquery.fancybox-media.js"></script>
+                <script src="~/Content/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
+
                 <div class="col-lg-12">
                     <h1 style="margin-top:7%; color:#0094ff; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bolder; ">@ViewBag.sub.subName</h1>
                     <hr />
@@ -227,10 +244,9 @@
                         if (i.subName.Equals(@ViewBag.sub.subName))
                         {
                             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                                <a href="~/Files/@src" class=" thumbnail" style="color:#1b1b1b;border:1px solid black;border-radius:0px;box-shadow: 5px 5px 2px #888888; background-color:#ffffff" rel="lightbox">
+                                <a href="~/Files/@src" class=" thumbnail fancybox" style="color:#1b1b1b;border:1px solid black;border-radius:0px;box-shadow: 5px 5px 2px #888888; background-color:#ffffff">
 
-
-                                    <img src="~/Files/@src" alt="" />
+                                    <img src="~/Files/@src" alt="" style="height:150px;width:150px;" />
 
                                     <font color="black">
                                         Item ID: @i.item_Id<br />
@@ -259,6 +275,21 @@
         </div>
 
     </div>
+
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            /*
+             *  Simple image gallery. Uses default settings
+             */
+
+            $('.fancybox').fancybox();
+
+        });
+
+    </script>
+
+
 
 </body>
 
