--- a/Views/Admin/AddProduct.cshtml
+++ b/Views/Admin/AddProduct.cshtml
@@ -6,39 +6,10 @@
     Session["Page"] = "AddProduct";
 }
 
-
-    <!-- The styles -->
-    <link id="bs-css" href="~/Content/css/bootstrap-cerulean.min.css" rel="stylesheet">
-
-    <link href="~/Content/css/charisma-app.css" rel="stylesheet">
-    <link href='~/Content/bower_components/fullcalendar/dist/fullcalendar.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print'>
-    <link href='~/Content/bower_components/chosen/chosen.min.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/colorbox/example3/colorbox.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/responsive-tables/responsive-tables.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' rel='stylesheet'>
-    <link href='~/Content/css/jquery.noty.css' rel='stylesheet'>
-    <link href='~/Content/css/noty_theme_default.css' rel='stylesheet'>
-    <link href='~/Content/css/elfinder.min.css' rel='stylesheet'>
-    <link href='~/Content/css/elfinder.theme.css' rel='stylesheet'>
-    <link href='~/Content/css/jquery.iphone.toggle.css' rel='stylesheet'>
-    <link href='~/Content/css/uploadify.css' rel='stylesheet'>
-    <link href='~/Content/css/animate.min.css' rel='stylesheet'>
-
-    <!-- jQuery -->
-
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <script src="~/Content/bower_components/jquery/jquery.min.js"></script>
-    <link href="~/Content/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <!-- Th
-
-
-
+<script src="~/Content/Script/charisma.js"></script>
 
 <div id="content" class="col-lg-10 col-sm-10">
-    <!-- content starts -->
+    <!-- content starts COPPPPPPPPYYYYYYYYYYYYYY -->
     <div>
         <ul class="breadcrumb">
             <li>
@@ -90,12 +61,12 @@
                         <hr />
 
 
-                       
+
 
 
                         <label>Category</label>
                         <select id="CategorySelector" name="category" class="ui-tabs-selected" style="margin-left:6%;">
-                            
+
                             <option value="n">-select-</option>
 
                             @foreach (var s in ViewBag.categoriesList)
@@ -115,13 +86,13 @@
 
                         @*<select id="subCategorySelector" name="subName" style="margin-left:3%;">
 
-                            @foreach (var s in Model)
-                            {
+                                @foreach (var s in Model)
+                                {
 
-                                <option value=@s.subName>@s.subName</option>
+                                    <option value=@s.subName>@s.subName</option>
 
-                            }
-                        </select>*@
+                                }
+                            </select>*@
                         <hr />
 
 
