--- a/Views/Admin/Remove.cshtml
+++ b/Views/Admin/Remove.cshtml
@@ -29,33 +29,6 @@
 }
 
 
-    <!-- The styles -->
-    <link id="bs-css" href="~/Content/css/bootstrap-cerulean.min.css" rel="stylesheet">
-
-    <link href="~/Content/css/charisma-app.css" rel="stylesheet">
-    <link href='~/Content/bower_components/fullcalendar/dist/fullcalendar.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print'>
-    <link href='~/Content/bower_components/chosen/chosen.min.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/colorbox/example3/colorbox.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/responsive-tables/responsive-tables.css' rel='stylesheet'>
-    <link href='~/Content/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' rel='stylesheet'>
-    <link href='~/Content/css/jquery.noty.css' rel='stylesheet'>
-    <link href='~/Content/css/noty_theme_default.css' rel='stylesheet'>
-    <link href='~/Content/css/elfinder.min.css' rel='stylesheet'>
-    <link href='~/Content/css/elfinder.theme.css' rel='stylesheet'>
-    <link href='~/Content/css/jquery.iphone.toggle.css' rel='stylesheet'>
-    <link href='~/Content/css/uploadify.css' rel='stylesheet'>
-    <link href='~/Content/css/animate.min.css' rel='stylesheet'>
-
-    <!-- jQuery -->
-
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-    <script src="~/Content/bower_components/jquery/jquery.min.js"></script>
-    <link href="~/Content/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
-    <!-- Th
-
 <div id="content" class="col-lg-10 col-sm-10">
     <!-- content starts -->
     <div>
@@ -130,7 +103,7 @@
 
 
                         <label>Category</label>
-                        <select name="gcategory" class="ui-tabs-selected" style="margin-left:8%;">
+                        <select id="CategorySelector" name="gcategory" class="ui-tabs-selected" style="margin-left:8%;">
 
                             @foreach (var s in ViewBag.categoryList)
                             {
@@ -141,8 +114,14 @@
                         </select>
 
 
+                        <hr />
+                        <label>Sub Category</label>
 
-                        <label>Select Sub-Category  to Delete</label>
+                        <div id="d1" style="margin-left:9%;"></div>
+
+
+
+                        @*<label>Select Sub-Category  to Delete</label>
 
                         <select name="sCategory" class="ui-tabs-selected" style="margin-left:8%;">
                             @foreach (var s in ViewBag.subcategoryList)
@@ -151,7 +130,7 @@
                                 <option value=@s.subName>@s.subName</option>
 
                             }
-                        </select>
+                        </select>*@
 
 
                         <hr />
@@ -178,3 +157,15 @@
     </div><!--/row-->
     <!-- content ends -->
 </div><!--/#content.col-md-0-->
+
+
+
+<script>
+
+    $('#CategorySelector').change(function () {
+        var value = $('#CategorySelector').val();
+
+        $('#d1').load('/Admin/category?cat=' + value);
+    });
+
+</script>
