--- a/Views/Admin/Remove.cshtml
+++ b/Views/Admin/Remove.cshtml
@@ -29,6 +29,43 @@
 }
 
 
+
+
+
+
+
+ <!-- The styles -->
+<link id="bs-css" href="~/Content/css/bootstrap-cerulean.min.css" rel="stylesheet">
+
+<link href="~/Content/css/charisma-app.css" rel="stylesheet">
+<link href='~/Content/bower_components/fullcalendar/dist/fullcalendar.css' rel='stylesheet'>
+<link href='~/Content/bower_components/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print'>
+<link href='~/Content/bower_components/chosen/chosen.min.css' rel='stylesheet'>
+<link href='~/Content/bower_components/colorbox/example3/colorbox.css' rel='stylesheet'>
+<link href='~/Content/bower_components/responsive-tables/responsive-tables.css' rel='stylesheet'>
+<link href='~/Content/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' rel='stylesheet'>
+<link href='~/Content/css/jquery.noty.css' rel='stylesheet'>
+<link href='~/Content/css/noty_theme_default.css' rel='stylesheet'>
+<link href='~/Content/css/elfinder.min.css' rel='stylesheet'>
+<link href='~/Content/css/elfinder.theme.css' rel='stylesheet'>
+<link href='~/Content/css/jquery.iphone.toggle.css' rel='stylesheet'>
+<link href='~/Content/css/uploadify.css' rel='stylesheet'>
+<link href='~/Content/css/animate.min.css' rel='stylesheet'>
+
+<!-- jQuery -->
+
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
+<link href="~/Content/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+<script src="~/Content/bower_components/jquery/jquery.min.js"></script>
+<link href="~/Content/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
+<!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<!-- The fav icon -->
+
+
 <div id="content" class="col-lg-10 col-sm-10">
     <!-- content starts -->
     <div>
