--- a/Views/Admin/AddBrand.cshtml
+++ b/Views/Admin/AddBrand.cshtml
@@ -52,7 +52,7 @@
                         <hr />
                         <div class="form-group">
                             <label>Brand Name</label>
-                            <input type="text" class="form-control" name="bname" placeholder="Brand Name">
+                            <input type="text" class="form-control" name="bname" required maxlength="45" placeholder="Brand Name">
                         </div>
 
  
