--- a/Views/Admin/AddCategory.cshtml
+++ b/Views/Admin/AddCategory.cshtml
@@ -52,7 +52,7 @@
                         <hr />
                         <div class="form-group">
                             <label>Category Name</label>
-                            <input type="text" class="form-control" name="c_name" placeholder="Brand Name">
+                            <input type="text" class="form-control" required maxlength="45" name="c_name" placeholder="Category Name">
                         </div>
 
 
