--- a/Views/Admin/AddSubCategory.cshtml
+++ b/Views/Admin/AddSubCategory.cshtml
@@ -140,7 +140,7 @@
                         <hr />
                         <div class="form-group">
                             <label>Sub-Category Name</label>
-                            <input type="text" class="form-control" name="subName" placeholder="Sub Category">
+                            <input type="text" class="form-control" required maxlength="45" name="subName" placeholder="Sub Category">
                         </div>
 
 
