--- a/Views/Home/getSubCategory.cshtml
+++ b/Views/Home/getSubCategory.cshtml
@@ -229,7 +229,7 @@
                 <script src="~/Content/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
 
                 <div class="col-lg-12">
-                    <h1 style="margin-top:7%; color:#0094ff; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bolder; ">@ViewBag.sub.subName</h1>
+                    <h1 style="margin-top:7%; color:black; font-size:30px;margin-left:9%;font-family:Bebas Neue; font-weight:bolder; ">@ViewBag.sub.subName</h1>
                     <hr />
                 </div>
 
