--- a/Views/Admin/AddAdmin.cshtml
+++ b/Views/Admin/AddAdmin.cshtml
@@ -59,7 +59,7 @@
                                         <div class="form-group">
                                             <label class="col-md-4 control-label" for="name">Name</label>
                                             <div class="col-md-5">
-                                                <input id="name" name="name" type="text"  placeholder="Name" class="form-control input-md" required="">
+                                                <input id="name" name="name" type="text" required maxlength="45" placeholder="Name" class="form-control input-md" required="">
 
                                             </div>
                                         </div>
@@ -68,16 +68,16 @@
                                         <div class="form-group">
                                             <label class="col-md-4 control-label" for="brand">E-mail</label>
                                             <div class="col-md-5">
-                                                <input id="email" name="email" type="text"  placeholder="email" class="form-control input-md" required="">
+                                                <input id="email" name="email" type="text" required maxlength="45" placeholder="email" class="form-control input-md" required="">
 
                                             </div>
                                         </div>
-
+                                        ssss
                                         <!-- Text input-->
                                         <div class="form-group">
                                             <label class="col-md-4 control-label" for="category">Password</label>
                                             <div class="col-md-5">
-                                                <input id="password" name="password"  type="text" placeholder="category" class="form-control input-md" required="">
+                                                <input id="password" name="password" type="text" required maxlength="45" placeholder="Password" class="form-control input-md" required="">
 
                                             </div>
                                         </div>
