--- a/Views/Admin/AddProduct.cshtml
+++ b/Views/Admin/AddProduct.cshtml
@@ -34,17 +34,17 @@
                     <form action="/Admin/Additem" method="post" enctype="multipart/form-data">
                         <div class="form-group">
                             <label>Name</label>
-                            <input type="text" class="form-control" name="name" placeholder="Title">
+                            <input type="text" class="form-control" required maxlength="45" name="name" placeholder="Title">
                         </div>
 
                         <div class="form-group">
                             <label>Price</label>
-                            <input type="number" class="form-control" name="price" placeholder="Price">
+                            <input type="number" class="form-control" required maxlength="45" name="price" placeholder="Price">
                         </div>
 
                         <div class="form-group">
                             <label>Stock</label>
-                            <input type="number" class="form-control" name="stock" placeholder="Stock">
+                            <input type="number" class="form-control" required maxlength="45" name="stock" placeholder="Stock">
                         </div>
 
                         <hr />
