--- a/Views/Shared/_Admin_Header.cshtml
+++ b/Views/Shared/_Admin_Header.cshtml
@@ -49,7 +49,7 @@
     <!-- topbar starts -->
     <div class="navbar navbar-default" role="navigation">
 
-        <div class="navbar-inner" style="background-color: lightslategrey;">
+        <div class="navbar-inner" style="background-color:#696464;">
             <button type="button" class="navbar-toggle pull-left animated flip">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
