--- a/Views/Home/userHistory.cshtml
+++ b/Views/Home/userHistory.cshtml
@@ -1,7 +1,7 @@
 ﻿@using OnlineStore.Models
 
 @{
-    ViewBag.Title = "userHistory";
+    ViewBag.Title = "History";
     Layout = "~/Views/Shared/_Layout.cshtml";
     Session["Page"] = "getAllOrders";
 
